[package]
name = "iotmq"
version = "0.1.0"
edition = "2024"
description = "IoTMQ is a high-performance MQTT broker for IoT, Powered by Rust, It fully implements the MQTT protocol V3.x and V5"
repository = "https://github.com/rustwalk/iotmq"
documentation = "https://docs.rs/iotmq"
homepage = "https://iotmq.io"
keywords = ["mqtt", "iot"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
tower-http = { version = "0.7.0", features = ["fs", "trace", "cors"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
arc-swap = "1.9.2"
config = "0.15.25"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
tracing-rolling-file = { version = "0.1.3", features = ["non-blocking"] }
tracing-appender = "0.2.5"
once_cell = "1.21.4"
clap = { version = "4.6.1", features = ["derive"] }
tokio-rustls = "0.26.4"
async-tungstenite = { version = "0.34.1", features = ["tokio-runtime"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/iotmq", dest = "/usr/bin/iotmq", mode = "755" },
    { source = "iotmq.service", dest = "/usr/lib/systemd/system/iotmq.service", mode = "644" },
    { source = "config/iotmq.toml", dest = "/etc/iotmq/iotmq.toml", mode = "644", config = true },
]

[package.metadata.deb]
assets = [
    ["target/release/iotmq", "/usr/bin/iotmq", "755"],
    ["iotmq.service", "/lib/systemd/system/iotmq.service", "644"],
    ["config/iotmq.toml", "/etc/iotmq/iotmq.toml", "644"],
]